[package]
name = "mergify-stack"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Native implementation of `mergify stack` subcommands."
publish = false

[dependencies]
chrono = { workspace = true }
mergify-core = { path = "../mergify-core" }
# `stack push` live progress reuses the shared TTY/`NO_COLOR`-aware
# color palette instead of hand-rolling ANSI consts.
mergify-tui = { path = "../mergify-tui" }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
# `stack push` live progress: query the terminal width so each
# in-place row is truncated to one physical line (multi-line
# cursor-up redraw breaks if a row wraps).
terminal_size = { workspace = true }
# Measure CJK/emoji/wide glyphs at their real terminal column width so
# the in-place redraw's truncation never lets a row wrap (a wrap
# desyncs the cursor-up math and corrupts the live block).
unicode-width = { workspace = true }
# `rt` for `spawn_blocking` — runs the synchronous git fetch/push
# off the async executor so the `stack push` progress spinner keeps
# ticking smoothly across them.
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
temp-env = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
