[package]
name = "mergify-test-support"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared test scaffolding for the mergify CLI Rust port. Not published."
publish = false

[dependencies]
mergify-core = { path = "../mergify-core" }

[lints]
workspace = true
