[package]
name = "mergify-tui"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Reusable terminal-UI primitives for mergify-cli: ANSI styling, relative-time formatter, tree-drawing characters."
publish = false

[dependencies]
anstyle = { workspace = true }
chrono = { workspace = true }
# Cursor restore on the picker's error/SIGINT paths — same version
# dialoguer already pulls in.
console = { workspace = true }
# SIGINT-during-picker handling: restore the cursor and exit 130
# before console's raw-mode key reader re-raises the signal.
ctrlc = { workspace = true }
# `select::fuzzy_select` — fzf-style picker for `stack open`. Kept
# behind this crate's wrapper so command crates never depend on
# dialoguer directly. fuzzy-select only: the editor/password
# default features are dead weight here.
dialoguer = { workspace = true }

[lints]
workspace = true
